WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305276
Third nested iframe with srcdoc does not render in Safari
https://bugs.webkit.org/show_bug.cgi?id=305276
Summary
Third nested iframe with srcdoc does not render in Safari
Ahmad Saleem
Reported
2026-01-10 15:31:52 PST
ssia - it is split from
bug 294334
- since we still fail first
comment 0
test, it is to fix
comment 3
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-10 15:31:59 PST
<
rdar://problem/167917471
>
Ahmad Saleem
Comment 2
2026-01-10 15:36:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56407
EWS
Comment 3
2026-01-10 20:48:50 PST
Committed
305421@main
(e62c8b61b1e2): <
https://commits.webkit.org/305421@main
> Reviewed commits have been landed. Closing PR #56407 and removing active labels.
Ahmad Saleem
Comment 4
2026-01-11 01:25:32 PST
***
Bug 270736
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug