Third nested iframe with srcdoc does not render in Safari https://bugs.webkit.org/show_bug.cgi?id=305276 rdar://167917471

Reviewed by Ryosuke Niwa.

The fix is similar to 305404@main, which was to fix about:blank case,
we had similar issue for about:srcdoc, where isProhibitedSelfReference
incorrectly determines about:srcdoc inside another about:srcdoc as self
referencing.

* Source/WebCore/html/HTMLFrameOwnerElement.cpp:
(WebCore::HTMLFrameOwnerElement::isProhibitedSelfReference const):
* LayoutTests/fast/frames/nested-about-srcdocs-expected.html: Added.
* LayoutTests/fast/frames/nested-about-srcdocs.html: Added.

Canonical link: https://commits.webkit.org/305421@main